force-app/main/default/objects/Premises__c/fields/Electric_Service_Address_Zip__c.field-meta.xml
<CustomField>
    <fullName>Electric_Service_Address_Zip__c</fullName>
    <description>The zip code for the electric service address</description>
    <label>Zip Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>