force-app/main/default/objects/Premises__c/fields/Endur_ID__c.field-meta.xml
<CustomField>
    <fullName>Endur_ID__c</fullName>
    <label>Endur ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>