force-app/main/default/objects/Premises__c/fields/ESI_ID_Status__c.field-meta.xml
<CustomField>
    <fullName>ESI_ID_Status__c</fullName>
    <description>Denotes the status of the ESI ID ex: Active, Inactive, De-energized.</description>
    <inlineHelpText>Denotes the status of the ESI ID ex: Active, Inactive, De-energized.</inlineHelpText>
    <label>Meter Status</label>
    <length>15</length>
    <type>Text</type>
</CustomField>