force-app/main/default/objects/Premises__c/fields/ESID__c.field-meta.xml
<CustomField>
    <fullName>ESID__c</fullName>
    <description>Electric Service Identifier</description>
    <externalId>true</externalId>
    <inlineHelpText>22-digit number</inlineHelpText>
    <label>ESID</label>
    <length>23</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>