force-app/main/default/objects/Premises__c/fields/Exempt_Code__c.field-meta.xml
<CustomField>
    <fullName>Exempt_Code__c</fullName>
    <description>OK tax report, exempt code
00. Not Exempt
01. State school land commission
02. Federal
03. County
04. City
05. School District
06. Restricted Indian Lands
07. Frac Oil
08. Gas Lift
09. OTC Assigned
10. State
11. Approved EOR
12. Other</description>
    <label>Exempt Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>01</fullName>
            </value>
            <value>
                <fullName>02</fullName>
            </value>
            <value>
                <fullName>03</fullName>
            </value>
            <value>
                <fullName>04</fullName>
            </value>
            <value>
                <fullName>05</fullName>
            </value>
            <value>
                <fullName>06</fullName>
            </value>
            <value>
                <fullName>07</fullName>
            </value>
            <value>
                <fullName>08</fullName>
            </value>
            <value>
                <fullName>09</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>11</fullName>
            </value>
            <value>
                <fullName>12</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>