force-app/main/default/objects/Premises__c/fields/Exempt_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Exempt_Percentage__c</fullName>
    <label>Exempt Decimal Equivalent</label>
    <precision>10</precision>
    <scale>7</scale>
    <type>Number</type>
</CustomField>