force-app/main/default/objects/Premises__c/fields/Exemption_Certificate_Number__c.field-meta.xml
<CustomField>
    <fullName>Exemption_Certificate_Number__c</fullName>
    <label>Exemption Certificate Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>