force-app/main/default/objects/Premises__c/fields/External_Update__c.field-meta.xml
<CustomField>
    <fullName>External_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>update was from external system (Safari)</inlineHelpText>
    <label>External Update</label>
    <type>Checkbox</type>
</CustomField>