force-app/main/default/objects/Premises__c/fields/Facility_ID__c.field-meta.xml
<CustomField>
    <fullName>Facility_ID__c</fullName>
    <description>ID to be entered into other systems to reference this record</description>
    <formula>CASESAFEID(Id)</formula>
    <inlineHelpText>ID to be entered into other systems to reference this record</inlineHelpText>
    <label>Facility ID</label>
    <type>Text</type>
</CustomField>