force-app/main/default/objects/Premises__c/fields/Facility_List__c.field-meta.xml
<CustomField>
    <fullName>Facility_List__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Which facility list does this premise belong to?</description>
    <inlineHelpText>Which facility list does this premise belong to?</inlineHelpText>
    <label>Current Facility List</label>
    <lookupFilter>
        <active>false</active>
        <booleanFilter>(1 AND 2) OR 3</booleanFilter>
        <filterItems>
            <field>$Source.Account__c</field>
            <operation>equals</operation>
            <valueField>Facility_List__c.Account__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>C&amp;I Premise Gas, C&amp;I Premise Electric</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Gas Choice Premise, Electric Premise</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Facility_List__c</referenceTo>
    <relationshipLabel>Premises</relationshipLabel>
    <relationshipName>Premises</relationshipName>
    <type>Lookup</type>
</CustomField>