force-app/main/default/objects/Premises__c/fields/Facility_List_Formula__c.field-meta.xml
<CustomField>
    <fullName>Facility_List_Formula__c</fullName>
    <formula>Facility_List__r.Facility_List_Number__c + &#39; - &#39; + Facility_List__r.Name</formula>
    <label>Facility List Formula</label>
    <type>Text</type>
</CustomField>