force-app/main/default/objects/Premises__c/fields/Fixed_Cost_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Cost_Estimate__c</fullName>
    <label>Fixed Cost Estimate</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>