force-app/main/default/objects/Premises__c/fields/FOM_Confirmation_Contact__c.field-meta.xml
<CustomField>
    <fullName>FOM_Confirmation_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>who is the contact to confirm FOM volumes are accurate each month?  CEIP</description>
    <inlineHelpText>who is the contact to confirm FOM volumes are accurate each month?  CEIP</inlineHelpText>
    <label>FOM Confirmation Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Premises (FOM Confirmation Contact)</relationshipLabel>
    <relationshipName>Premises1</relationshipName>
    <type>Lookup</type>
</CustomField>