force-app/main/default/objects/Premises__c/fields/FOM_Nomination__c.field-meta.xml
<CustomField>
    <fullName>FOM_Nomination__c</fullName>
    <description>first of month nomination to be communicated via campaign member.  Volume is overwritten each month.</description>
    <inlineHelpText>first of month nomination to be communicated via campaign member.  Volume is overwritten each month.</inlineHelpText>
    <label>FOM Nomination</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>