force-app/main/default/objects/Premises__c/fields/Fuel_Charges_Apply__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Charges_Apply__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fuel Charges Apply</label>
    <type>Checkbox</type>
</CustomField>