force-app/main/default/objects/Premises__c/fields/Fuel_Rate__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Rate__c</fullName>
    <label>Fuel Rate</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Atmos KS / Market Fuel</fullName>
            </value>
            <value>
                <fullName>BHE / Market Fuel</fullName>
            </value>
            <value>
                <fullName>BHE / NNG Fuel</fullName>
            </value>
            <value>
                <fullName>BHE / Production Fuel</fullName>
            </value>
            <value>
                <fullName>BHE / Tyson Fuel</fullName>
            </value>
            <value>
                <fullName>KGS K System / Production Fuel</fullName>
            </value>
            <value>
                <fullName>KGS K System / Market Fuel</fullName>
            </value>
            <value>
                <fullName>KGS T System / No Fuel</fullName>
            </value>
            <value>
                <fullName>PSCO Fuel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>