force-app/main/default/objects/Premises__c/fields/Gas_Premise_Number__c.field-meta.xml
<CustomField>
    <fullName>Gas_Premise_Number__c</fullName>
    <externalId>true</externalId>
    <label>Gas Premise Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>