force-app/main/default/objects/Premises__c/fields/GIS_ID__c.field-meta.xml
<CustomField>
    <fullName>GIS_ID__c</fullName>
    <description>meter number from GIS</description>
    <inlineHelpText>meter number from GIS</inlineHelpText>
    <label>GIS ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>