force-app/main/default/objects/Premises__c/fields/HealthTrust_GPO_ID__c.field-meta.xml
<CustomField>
    <fullName>HealthTrust_GPO_ID__c</fullName>
    <label>HealthTrust GPO ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>