force-app/main/default/objects/Premises__c/fields/Heating_System__c.field-meta.xml
<CustomField>
    <fullName>Heating_System__c</fullName>
    <description>What type of fuel the premise uses for heating</description>
    <label>Heating System</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Gas</fullName>
            </value>
            <value>
                <fullName>Electric</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>