force-app/main/default/objects/Premises__c/fields/Is_Sales_Rep_the_Owner__c.field-meta.xml
<CustomField>
    <fullName>Is_Sales_Rep_the_Owner__c</fullName>
    <formula>IF(OwnerId == Sales_Rep__c, True, False)</formula>
    <label>Is Sales Rep the Owner?</label>
    <type>Checkbox</type>
</CustomField>