force-app/main/default/objects/Premises__c/fields/Is_Virtual__c.field-meta.xml
<CustomField>
    <fullName>Is_Virtual__c</fullName>
    <defaultValue>false</defaultValue>
    <description>is this a virtual premise for billing purposes (Cashout, Futures, Trade, BTU adjustment, etc)?</description>
    <inlineHelpText>is this a virtual premise for billing purposes (Cashout, Futures, Trade, BTU adjustment, etc)?</inlineHelpText>
    <label>Is Virtual</label>
    <type>Checkbox</type>
</CustomField>