force-app/main/default/objects/Premises__c/fields/Jurisdiction__c.field-meta.xml
<CustomField>
    <fullName>Jurisdiction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Jurisdiction</label>
    <referenceTo>Jurisdiction__c</referenceTo>
    <relationshipLabel>Wells</relationshipLabel>
    <relationshipName>Premises</relationshipName>
    <type>Lookup</type>
</CustomField>