force-app/main/default/objects/Premises__c/fields/Kansas_Well_Code__c.field-meta.xml
<CustomField>
    <fullName>Kansas_Well_Code__c</fullName>
    <label>Kansas Well Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>