force-app/main/default/objects/Premises__c/fields/Lease_Type__c.field-meta.xml
<CustomField>
    <fullName>Lease_Type__c</fullName>
    <formula>IF( FIND(&#39;-&#39;, Unit_Lease_Number__c ) = 0
, NULL
, MID( Unit_Lease_Number__c , 0, FIND(&#39;-&#39;, Unit_Lease_Number__c )-1)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lease Type</label>
    <type>Text</type>
</CustomField>