force-app/main/default/objects/Premises__c/fields/Load_Profile__c.field-meta.xml
<CustomField>
    <fullName>Load_Profile__c</fullName>
    <label>Load Profile</label>
    <length>75</length>
    <type>Text</type>
</CustomField>