force-app/main/default/objects/Premises__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>Physical location of the premise</description>
    <inlineHelpText>Physical location of the premise</inlineHelpText>
    <label>Location</label>
    <scale>8</scale>
    <type>Location</type>
</CustomField>