force-app/main/default/objects/Premises__c/fields/Louisiana_Operator__c.field-meta.xml
<CustomField>
    <fullName>Louisiana_Operator__c</fullName>
    <description>LA tax report</description>
    <label>Louisiana Operator</label>
    <length>100</length>
    <type>Text</type>
</CustomField>