force-app/main/default/objects/Premises__c/fields/Mail_Undeliverable__c.field-meta.xml
<CustomField>
    <fullName>Mail_Undeliverable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Mail to this customer was returned</description>
    <inlineHelpText>Mail to this customer was returned</inlineHelpText>
    <label>Mail undeliverable</label>
    <type>Checkbox</type>
</CustomField>