force-app/main/default/objects/Premises__c/fields/Master_Well__c.field-meta.xml
<CustomField>
    <fullName>Master_Well__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The master grouping for this well, and others.</description>
    <inlineHelpText>The master grouping for this well, and others.</inlineHelpText>
    <label>Master Well</label>
    <referenceTo>Premises__c</referenceTo>
    <relationshipLabel>Associated Wells (From Master Well)</relationshipLabel>
    <relationshipName>PremisesMasterWell</relationshipName>
    <type>Lookup</type>
</CustomField>