force-app/main/default/objects/Premises__c/fields/MDQ__c.field-meta.xml
<CustomField>
    <fullName>MDQ__c</fullName>
    <label>MDQ (MMBtu)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>