force-app/main/default/objects/Premises__c/fields/MDQ_Therm__c.field-meta.xml
<CustomField>
    <fullName>MDQ_Therm__c</fullName>
    <formula>MDQ__c * 10</formula>
    <label>MDQ Therm</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>