force-app/main/default/objects/Premises__c/fields/Meter_Data_Permission__c.field-meta.xml
<CustomField>
    <fullName>Meter_Data_Permission__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has the customer at this premise authorized us to use its meter data?</description>
    <inlineHelpText>Has the customer at this premise authorized us to use its meter data?</inlineHelpText>
    <label>Meter Data Permission</label>
    <type>Checkbox</type>
</CustomField>