force-app/main/default/objects/Premises__c/fields/Meter_Data_Status__c.field-meta.xml
<CustomField>
    <fullName>Meter_Data_Status__c</fullName>
    <description>If the customer has provided access to their meter data, have we completed the request?</description>
    <inlineHelpText>If the customer has provided access to their meter data, have we completed the request?</inlineHelpText>
    <label>Meter Data Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not requested</fullName>
                <default>true</default>
                <label>Not requested</label>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Estimated</fullName>
            </value>
            <value>
                <fullName>Estimated with user adjustment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>