force-app/main/default/objects/Premises__c/fields/Meter_Name_and_Number__c.field-meta.xml
<CustomField>
    <fullName>Meter_Name_and_Number__c</fullName>
    <formula>BLANKVALUE(Premise_Nickname__c,&quot;NoName&quot;) &amp; &quot;: &quot; &amp; BLANKVALUE(Meter_Number__c,&quot;NoNumber&quot;)</formula>
    <label>Meter Name and Number</label>
    <type>Text</type>
</CustomField>