force-app/main/default/objects/Premises__c/fields/Meter_Number__c.field-meta.xml
<CustomField>
    <fullName>Meter_Number__c</fullName>
    <description>Meter number can be found on electric bills and on the meter itself</description>
    <inlineHelpText>Meter number can be found on electric bills and on the meter itself</inlineHelpText>
    <label>Meter Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>