force-app/main/default/objects/Premises__c/fields/Meter_Phone_Line_Number__c.field-meta.xml
<CustomField>
    <fullName>Meter_Phone_Line_Number__c</fullName>
    <inlineHelpText>Number for the phoneline to the meter</inlineHelpText>
    <label>Meter Phone Line Number</label>
    <type>Phone</type>
</CustomField>