force-app/main/default/objects/Premises__c/fields/Meter_Read_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Meter_Read_Cycle__c</fullName>
    <description>The ERCOT meter read cycle code (2 digits</description>
    <label>Meter Read Cycle</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>