force-app/main/default/objects/Premises__c/fields/Metered__c.field-meta.xml
<CustomField>
    <fullName>Metered__c</fullName>
    <description>The derivation of the PROFILETYPE of the PROFILECODE. If the PROFILETYPE is = NM, the data would show N for not metered. If the PROFILETYPE is &lt;&gt; NM, the data would show Y for metered</description>
    <inlineHelpText>Is the premise metered, Y or N?</inlineHelpText>
    <label>Metered?</label>
    <length>1</length>
    <type>Text</type>
</CustomField>