force-app/main/default/objects/Premises__c/fields/MP_Number__c.field-meta.xml
<CustomField>
    <fullName>MP_Number__c</fullName>
    <description>Format: XXXXXX</description>
    <label>MP Number</label>
    <length>6</length>
    <type>Text</type>
</CustomField>