force-app/main/default/objects/Premises__c/fields/Occupants__c.field-meta.xml
<CustomField>
    <fullName>Occupants__c</fullName>
    <description>How many people live at the premise?</description>
    <inlineHelpText>How many people live at the premise?</inlineHelpText>
    <label>Occupants</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>