force-app/main/default/objects/Premises__c/fields/Oklahoma_County_Number__c.field-meta.xml
<CustomField>
    <fullName>Oklahoma_County_Number__c</fullName>
    <label>Oklahoma County Number</label>
    <length>5</length>
    <type>Text</type>
</CustomField>