force-app/main/default/objects/Premises__c/fields/Oklahoma_Production_Code__c.field-meta.xml
<CustomField>
    <fullName>Oklahoma_Production_Code__c</fullName>
    <label>Oklahoma Production Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>