force-app/main/default/objects/Premises__c/fields/Oklahoma_PUN_Number__c.field-meta.xml
<CustomField>
    <fullName>Oklahoma_PUN_Number__c</fullName>
    <label>Oklahoma PUN Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>