force-app/main/default/objects/Premises__c/fields/Oklahoma_Purchaser_Number__c.field-meta.xml
<CustomField>
    <fullName>Oklahoma_Purchaser_Number__c</fullName>
    <label>Oklahoma Purchaser Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>