force-app/main/default/objects/Premises__c/fields/Open_Service_Orders__c.field-meta.xml
<CustomField>
    <fullName>Open_Service_Orders__c</fullName>
    <description>Concatenation of all pending service orders by pipe ( | ) that includes the service order type and scheduled date ex: 07/07/2008,Move In|,Move Out to CSA</description>
    <inlineHelpText>Are there currently any scheduled move-ins/outs or switches?</inlineHelpText>
    <label>Open Service Orders</label>
    <type>TextArea</type>
</CustomField>