force-app/main/default/objects/Premises__c/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Operator</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Premises (Operator)</relationshipLabel>
    <relationshipName>Premises3</relationshipName>
    <type>Lookup</type>
</CustomField>