force-app/main/default/objects/Premises__c/fields/Operator_Permit_Number__c.field-meta.xml
<CustomField>
    <fullName>Operator_Permit_Number__c</fullName>
    <label>Operator Permit Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>