force-app/main/default/objects/Premises__c/fields/Owner_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_First_Name__c</fullName>
    <formula>Owner:User.FirstName</formula>
    <label>Owner First Name</label>
    <type>Text</type>
</CustomField>