force-app/main/default/objects/Premises__c/fields/OwnerIsCurrentUser__c.field-meta.xml
<CustomField>
    <fullName>OwnerIsCurrentUser__c</fullName>
    <formula>IF( OwnerId = $User.Id ,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OwnerIsCurrentUser</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>