force-app/main/default/objects/Premises__c/fields/Phone_Install__c.field-meta.xml
<CustomField>
    <fullName>Phone_Install__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is CES responsible for phone line installation?</description>
    <inlineHelpText>Is CES responsible for phone line installation?</inlineHelpText>
    <label>Phone Install</label>
    <type>Checkbox</type>
</CustomField>