force-app/main/default/objects/Premises__c/fields/Pin__c.field-meta.xml
<CustomField>
    <fullName>Pin__c</fullName>
    <description>Used for NE Gas Choice</description>
    <inlineHelpText>Used for NE Gas Choice</inlineHelpText>
    <label>Pin</label>
    <length>10</length>
    <type>Text</type>
</CustomField>