force-app/main/default/objects/Premises__c/fields/Pipeline__c.field-meta.xml
<CustomField>
    <fullName>Pipeline__c</fullName>
    <label>Pipeline</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ANR</fullName>
            </value>
            <value>
                <fullName>NGPL</fullName>
            </value>
            <value>
                <fullName>NNG</fullName>
            </value>
            <value>
                <fullName>Viking</fullName>
            </value>
            <value>
                <fullName>Great Lakes</fullName>
            </value>
            <value>
                <fullName>Northern B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>