force-app/main/default/objects/Premises__c/fields/Pipeline_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pipeline</label>
    <referenceTo>Pipeline__c</referenceTo>
    <relationshipLabel>Premises</relationshipLabel>
    <relationshipName>Premises</relationshipName>
    <type>Lookup</type>
</CustomField>