force-app/main/default/objects/Premises__c/fields/PointD__c.field-meta.xml
<CustomField>
    <fullName>PointD__c</fullName>
    <description>Used for Gas Choice</description>
    <inlineHelpText>Used for Gas Choice</inlineHelpText>
    <label>PointD</label>
    <length>12</length>
    <type>Text</type>
</CustomField>