force-app/main/default/objects/Premises__c/fields/POLR_Customer_Class__c.field-meta.xml
<CustomField>
    <fullName>POLR_Customer_Class__c</fullName>
    <description>Calculated Provider Of Last Resort Customer class assignment by ERCOT ex: Residential, Small Non-Residential, Medium Non-Residential, Large Non-Residential</description>
    <inlineHelpText>Calculated Provider Of Last Resort Customer class assignment by ERCOT ex: Residential, Small Non-Residential, Medium Non-Residential, Large Non-Residential</inlineHelpText>
    <label>POLR Customer Class</label>
    <length>25</length>
    <type>Text</type>
</CustomField>