force-app/main/default/objects/Premises__c/fields/Pool__c.field-meta.xml
<CustomField>
    <fullName>Pool__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does the home have a swimming pool?</description>
    <label>Pool</label>
    <type>Checkbox</type>
</CustomField>