force-app/main/default/objects/Premises__c/fields/Power_Region__c.field-meta.xml
<CustomField>
    <fullName>Power_Region__c</fullName>
    <description>The character code identifying the power region the ESI ID is electrically connected in as assigned by the TDSP (ERCOT, SPP, SERC, WSCC).</description>
    <inlineHelpText>The character code identifying the power region the ESI ID is electrically connected in as assigned by the TDSP (ERCOT, SPP, SERC, WSCC).</inlineHelpText>
    <label>Power Region</label>
    <length>10</length>
    <type>Text</type>
</CustomField>