force-app/main/default/objects/Premises__c/fields/Premise_Nickname__c.field-meta.xml
<CustomField>
    <fullName>Premise_Nickname__c</fullName>
    <description>Familiar name for this premise.</description>
    <inlineHelpText>Familiar name for this premise.</inlineHelpText>
    <label>Premise Nickname</label>
    <length>100</length>
    <type>Text</type>
</CustomField>