force-app/main/default/objects/Premises__c/fields/Premise_ReActivated__c.field-meta.xml
<CustomField>
    <fullName>Premise_ReActivated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Premise ReActivated</label>
    <type>Checkbox</type>
</CustomField>