force-app/main/default/objects/Premises__c/fields/Premise_Status__c.field-meta.xml
<CustomField>
    <fullName>Premise_Status__c</fullName>
    <label>Premise Status OLD</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Terminated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>