force-app/main/default/objects/Premises__c/fields/Premise_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>Premise_Status_Date__c</fullName>
    <label>Premise Status Date</label>
    <type>Date</type>
</CustomField>