force-app/main/default/objects/Premises__c/fields/Premise_Status_Date_For_Next_Month_Rptng__c.field-meta.xml
<CustomField>
    <fullName>Premise_Status_Date_For_Next_Month_Rptng__c</fullName>
    <formula>IF (Premise_Status_Formula__c == &#39;Terminated&#39;
 , DATE(IF(MONTH(Premise_Status_Date_Formula__c)==12 || MONTH(Premise_Status_Date_Formula__c)==11
         , YEAR(Premise_Status_Date_Formula__c) + 1
         , YEAR(Premise_Status_Date_Formula__c)
        ), IF(MONTH(Premise_Status_Date_Formula__c)==12 
            , 2
            , IF(MONTH(Premise_Status_Date_Formula__c)==11
               , 1
               , MONTH(Premise_Status_Date_Formula__c) + 2
              )
           ), 2
   )
 , DATE(IF(MONTH(Premise_Status_Date_Formula__c)==12 
         , YEAR(Premise_Status_Date_Formula__c) + 1
         , YEAR(Premise_Status_Date_Formula__c)
        ), IF(MONTH(Premise_Status_Date_Formula__c)==12 
            , 1
            , MONTH(Premise_Status_Date_Formula__c) + 1
           ), 1
   )
)</formula>
    <label>Premise Status Date For Next Month Rptng</label>
    <type>Date</type>
</CustomField>