force-app/main/default/objects/Premises__c/fields/Premise_Status_Date_For_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Premise_Status_Date_For_Reporting__c</fullName>
    <formula>IF (Premise_Status_Formula__c == &#39;Terminated&#39;,
 DATE(IF(MONTH(Premise_Status_Date_Formula__c)==12 
       , YEAR(Premise_Status_Date_Formula__c) + 1
       , YEAR(Premise_Status_Date_Formula__c)
     ), IF(MONTH(Premise_Status_Date_Formula__c)==12 
        , 1
        , MONTH(Premise_Status_Date_Formula__c) + 1
        ), 2
 ), Premise_Status_Date_Formula__c
)</formula>
    <label>Premise Status Date For Reporting</label>
    <type>Date</type>
</CustomField>