force-app/main/default/objects/Premises__c/fields/Premise_Status_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>Premise_Status_Date_Formula__c</fullName>
    <formula>Current_Premise_Status__r.Status_Date__c</formula>
    <label>Premise Status Date Formula</label>
    <type>Date</type>
</CustomField>