force-app/main/default/objects/Premises__c/fields/Premise_Status_Formula__c.field-meta.xml
<CustomField>
    <fullName>Premise_Status_Formula__c</fullName>
    <formula>TEXT(Current_Premise_Status__r.Status__c)</formula>
    <label>Premise Status</label>
    <type>Text</type>
</CustomField>